# java

./: README.md
APJ1Bootcamp/rogue/src/: general_stats.json  session_data.json
JavaSE/src/exercise7/: result.txt
SpringKubernets/: deployment.yaml  k8sactions.sh  pom.xml
TicTacToe/src/TicTacToe/: build.gradle.kts
TicTacToeSpringMvcJwt/src/TicTacToe/: build.gradle.kts
TicTacToeSpringRestMvcExample/src/TicTacToe/: .gitignore
bank_rest/: README.md  docker-compose.yml  pom.xml
bank_rest/docs/: README.md  docker-compose.yml  openapi.yaml
maze/src/: Makefile  manual.texi  moveLibrary.sh
maze/src/MazeServer/: build.gradle.kts  settings.gradle.kts
maze/src/demo/: pom.xml
microservice_architecture/ApiGatewayExample/: README.md  docker-compose.yaml  runContainers.sh
microservice_architecture/ApiGatewayExample/api-gateway/: Dockerfile  build.gradle.kts  docker-compose.yaml
microservice_architecture/ApiGatewayExample/eureka-client/: Dockerfile  build.gradle.kts
microservice_architecture/ApiGatewayExample/eureka-server/: Dockerfile  build.gradle.kts
race/src/: Makefile  mkdirToWrapper.sh  moveLibrary.sh  runLinLib.sh  runLinRaceLib.sh  s21_snake.sh  s21_tetris.sh
race/src/gui/desktop/s21_snake/: CMakeLists.txt  game_window.cpp  game_window.h  lib.c  lib.h  main_desktop.cpp  mainwindows21snake.cpp  mainwindows21snake.h  turnOnFromJava.cpp  turnOnFromJava.h
rogue/src/: Main.java  Makefile  stat.json
rogue/src/datalayer/: DataComparator.java  ProcessingSession.java
rogue/src/domain/: BuilderEntrances.java  Constants.java  Direction.java  Graph.java  Item.java  (+4 more)
(+358 files in other folders)
